# envdiff

./: .gitignore  README.md  pyproject.toml
envdiff/: __init__.py  annotator.py  auditor.py  baseline.py  cli.py  cli_annotate.py  cli_audit.py  cli_baseline.py  cli_baseline_main.py  cli_dedup.py  cli_export.py  cli_filter.py  cli_merge.py  cli_patch.py  cli_profile.py  cli_redact.py  cli_scheduler.py  cli_snapshot.py  cli_stats.py  cli_validate.py  cli_watchdog.py  comparator.py  deduplicator.py  differ.py  differ_matrix.py  differ_stats.py  exporter.py  filter.py  formatter.py  grouper.py  linter.py  masker.py  merger.py  normalizer.py  parser.py  patcher.py  pinner.py  profiler.py  redactor.py  renamer.py  (+11 more)
tests/: test_annotator.py  test_auditor.py  test_baseline.py  test_cli.py  test_cli_audit.py  test_cli_baseline.py  test_cli_filter.py  test_cli_patch.py  test_cli_scheduler.py  test_cli_snapshot.py  test_comparator.py  test_deduplicator.py  test_differ.py  test_differ_matrix.py  test_differ_stats.py  test_exporter.py  test_filter.py  test_formatter.py  test_grouper.py  test_linter.py  test_masker.py  test_merger.py  test_normalizer.py  test_parser.py  test_patcher.py  test_pinner.py  test_profiler.py  test_redactor.py  test_renamer.py  test_reporter.py  test_scheduler.py  test_scorer.py  test_snapshot.py  test_snapshot_metadata.py  test_sorter.py  test_summarizer.py  test_tagger.py  test_templater.py  test_trimmer.py  test_validator.py  (+1 more)
