[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "envdiff"
version = "0.1.0"
description = "Diff environment variable sets across staging and production configs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["env", "diff", "devops", "configuration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
envdiff = "envdiff.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["envdiff"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[tool.setuptools.packages.find]
where = ["."]
include = ["envdiff*"]
